--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,9 +40,9 @@
 				"ms-python.python",
 				"ms-toolsai.jupyter",
 				"ms-toolsai.jupyter-keymap",
-				"ms-toolsai.jupyter-renderers",
+/*				"ms-toolsai.jupyter-renderers",*/
 /*				"ms-vsliveshare.vsliveshare",*/
-				"notZaki.pandocciter",
+/*				"notZaki.pandocciter",*/
 				"nvarner.typst-lsp",
 /* 				"REditorSupport.r",*/
 				"RDebugger.r-debugger", 
